# paxman

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  ARCHITECHTURE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEVELOPMENT.md  EXTENDING.md  GLOSSARY.md  LICENSE  Makefile  PACKAGE_STRUCTURE.md  PACKAGE_STRUCTURE_draft.md  PRD.md  README.md  REPLAY_AND_DETERMINISM.md  SECURITY.md  TESTING_STRATEGY.md  V1_ACCEPTANCE_CRITERIA.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  skills-lock.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yaml  opencode.yml  release.yml
.omo/: ralph-loop.local.md
.omo/run-continuation/: ses_10a3ff080ffeihRlNctHP8QrRZ.json
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
docs/: INVESTOR_PITCH_CONTENT.md  MAINTAINERS.md  TEST_DATA.md  index.md
docs/adr/: 0001-field-centric-planning.md  0002-rule-based-planner-v1.md  0003-separate-reconciler.md  0004-money-first-class-type.md  0005-confidence-ownership.md  0006-sequential-execution-v1.md  0007-contract-adapter-set-v1.md  0008-license-decision.md  0009-dict-dsl-v1.md  0010-budget-money-decimal.md  0011-format-auto-detection-for-json-schema-dicts.md  0012-v1-capabilities-self-register-on-import.md  0013-defusedxml-optional-extra.md  0014-v1-1-0-cleanup-transforms.md  0015-format-aware-executor-auto-dispatch.md  AGENTS.md  README.md  agents-knowledge.md  index.md
docs/concepts/: MIGRATION_GUIDE.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  capabilities.md  contracts.md  planning.md  reconciliation.md  replay.md
docs/contributing/: code-of-conduct.md  development.md  index.md  maintainers.md  test-data.md  testing-strategy.md
docs/guides/: README.md
docs/howto/: add_adapter.md  add_capability.md  add_inference_provider.md  replay_artifact.md
docs/operations/: changelog.md
docs/reference/: architecture.md  dependencies.md  extending.md  glossary.md  package-structure.md  replay-and-determinism.md
docs/reports/: 2026-06-26-sprint-delivery-audit.md
docs/security/: index.md
docs/specs/: README.md  capability-cost-model.md  dict-dsl-spec.md  input-profile-spec.md  license-decision.md
docs/sprints/: CHANGES_LOG.md  README.md  bandit-report.md  cross-platform-verification.md  oidc-setup.md  performance-baseline.md  pip-audit-report.md  retrospective-v1.0.0.md  sprint-00-design-closure.md  sprint-01-foundation.md  sprint-02-contract-subsystem.md  sprint-03-planner-and-capabilities.md  sprint-04-executor-and-capabilities.md  sprint-05-reconciler-and-money.md  sprint-06-artifact-and-api.md  sprint-07-integration-and-property-tests.md  sprint-07a-budget-money-decimal.md  sprint-08-docs-ci-hardening.md  sprint-09-production-hardening.md  sprint-10-release.md  v0.5.0-release-notes.md
docs/wiki/: Home.md
examples/ai_agent_ingest/: .gitignore  README.md  pyproject.toml
examples/ai_agent_ingest/src/ai_agent_ingest/: __init__.py  __main__.py  agent.py  contracts.py  fake_llm.py  tools.py
examples/ai_agent_ingest/tests/: conftest.py  test_agent.py  test_smoke.py  test_tools.py
examples/backend_service/: .gitignore  README.md  pyproject.toml
examples/backend_service/src/backend_service/: __init__.py  app.py  contracts.py  models.py
examples/backend_service/tests/: conftest.py  test_app.py  test_smoke.py
examples/saas_procurement/: .gitignore  README.md  pyproject.toml
examples/saas_procurement/data/: manifest.csv
examples/saas_procurement/data/inputs/: invoice_acme.txt  invoice_globex.txt  quotation_initech.txt
examples/saas_procurement/src/saas_procurement/: __init__.py  __main__.py  contracts.py  manifest.py  pipeline.py
examples/saas_procurement/tests/: conftest.py  test_manifest.py  test_pipeline.py  test_replay_hash.py
playground/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  pyproject.toml
playground/data/invoices/: sample_invoice.txt
playground/notebooks/: 00-welcome.ipynb  01-basics-contracts.ipynb  02-capability-text-extraction.ipynb  03-capability-regex-extraction.ipynb  04-capability-lookup.ipynb  05-capability-inference.ipynb  06-capability-validation.ipynb  07-replay.ipynb  08-money-and-decimal.ipynb  09-full-pipeline-invoice.ipynb  10-budget-and-policy.ipynb
playground/tests/: test_notebook_smoke.py
scripts/: benchmark_import_time.py  bootstrap_golden_artifacts.py  check_subsystem_coverage.py  fetch_test_data.py
src/paxman/: __init__.py  budget.py  clock.py  errors.py  ids.py  logging.py  protocols.py  serialization.py  types.py  versioning.py
tests/: conftest.py  test_smoke.py
tests/benchmark/: conftest.py  test_benchmark_normalize.py  test_benchmark_replay.py
tests/fixtures/: AGENTS.md  DATASET_LICENSES.md  DOWNLOAD_LOG.md  README.md  public_api_snapshot.json
tests/integration/: test_golden_artifacts.py  test_replay_golden_reproducibility.py  test_replay_integrity.py  test_saas_procurement_replay.py  test_smoke_e2e.py
tests/property/: test_cleanup_transforms_determinism.py  test_contract_openapi_property.py  test_executor_determinism.py  test_format_extractors_determinism.py  test_planner_determinism.py  test_reconciler_property_money.py  test_reconciler_property_monotonicity.py  test_replay_byte_equal_and_hash_detection.py
tests/public_api/: test_public_api.py
tests/unit/: test_artifact_coverage.py  test_budget.py  test_capability_case_normalization.py  test_capability_csv_extraction.py  test_capability_inference.py  test_capability_json_path_extraction.py  test_capability_lookup.py  test_capability_regex_extraction.py  test_capability_result.py  test_capability_spec_registry.py  test_capability_text_extraction.py  test_capability_trim_extraction.py  test_capability_validation.py  test_capability_xpath_extraction.py  test_clock.py  test_contract_canonical.py  test_ids.py  (+24 more)
website/: .dockerignore  brand-spec.md  docker-compose.yml  index.html
(+190 files in other folders)
