[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paxman"
version = "1.0.1"
description = "Contract-driven deterministic normalization engine for Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Paxman core team" }]
keywords = [
    "normalization",
    "contracts",
    "deterministic",
    "evidence",
    "replay",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies (≤ 3 packages per DEPENDENCIES.md §1).
# structlog is made core per Sprint 0 CHANGES_LOG §6 Q8 recommendation;
# it is the canonical structured-logging framework per ARCHITECTURE.md §12.
dependencies = [
    "attrs>=23.0",
    "typing-extensions>=4.0",
    "structlog>=24.1",
    # Version comparison (Sprint 6: replay version checks per D6.7).
    # Added per DEPENDENCIES.md §5.4 exception — packaging is a tiny,
    # pure-Python package with zero transitive deps, maintained by PyPA.
    "packaging>=24.0",
]

[project.optional-dependencies]
# Adapter extras (declared in DEPENDENCIES.md §3.1).
pydantic = ["pydantic>=2.5"]
json-schema = ["jsonschema>=4.20"]
openapi = ["openapi-spec-validator>=0.6"]
# Security extra (ADR-0013): hardened XML parsing for xpath_extraction.
# When installed, the capability uses defusedxml.ElementTree.fromstring
# instead of xml.etree.ElementTree.fromstring, which is flagged by
# bandit B314 / ruff S314 because the stdlib parser is vulnerable to
# entity-expansion attacks (billion laughs, DTD retrieval).
xml-secure = ["defusedxml>=0.7.1"]
# Inference extras are V2; V1 ships a stub provider.
# Convenience meta-extra. ``--all-extras`` (used by ``make install-frozen``)
# installs every extra, so CI exercises the hardened XML path automatically.
all = ["paxman[pydantic,json-schema,openapi,xml-secure]"]

# Test extras (Sprint 2+ will start using hypothesis).
test = ["hypothesis>=6.0"]

[project.urls]
Homepage = "https://github.com/nexusnv/paxman"
Issues = "https://github.com/nexusnv/paxman/issues"
Changelog = "https://github.com/nexusnv/paxman/blob/main/CHANGELOG.md"

# --- Hatchling build configuration -------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/paxman"]

# Force-include py.typed (PEP 561 marker). Hatchling auto-includes files
# inside the package directory, but the force-include makes the intent
# explicit and survives edge cases (verified per pypa/hatch#820).
[tool.hatch.build.targets.wheel.force-include]
"src/paxman/py.typed" = "paxman/py.typed"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  # Docs tree (served by Read the Docs)
  "/docs/adr",
  "/docs/concepts",
  "/docs/howto",
  "/docs/reference",
  "/docs/specs",
  "/docs/guides",
  "/docs/contributing",
  "/docs/security",
  "/docs/operations",
  "/docs/index.md",
  # Build config for the RTD site
  "/mkdocs.yml",
  "/.readthedocs.yaml",
  # Top-level README + changelog stub + license
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
]

# --- Ruff (lint + format) ----------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "docs/",
    ".venv/",
    "build/",
    "dist/",
    # Top-level scripts/ is a vendoring tool, not library code; lint quality
    # on it is enforced by its own subproject linting.
    "scripts/",
    # .agents/skills/ contains agent-skill scripts; not library code.
    ".agents/skills/",
    # tests/fixtures/ contains vendored third-party test data; not our code.
    "tests/fixtures/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "ASYNC", # async-correctness
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line length (handled by ruff format)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]  # asserts + untyped fixtures are OK in tests
"examples/**/tests/**/*.py" = ["S101", "ANN", "S603"]  # asserts + untyped fixtures + subprocess calls are OK in example tests
# Example code legitimately uses `Any` for the tool/agent contract paramters
# (the caller may pass any agent framework, any LLM, any contract type);
# suppress ANN401 so the example signatures are not noisier than they need to be.
"examples/**/*.py" = ["ANN401"]
"src/paxman/__init__.py" = ["F401"]  # re-exports may appear unused until populated in Sprint 6
# Adapters legitimately deal with `Any` (external contract types are arbitrary);
# suppress ANN401 so the adapter signatures are not noisier than they need to be.
"src/paxman/contract/adapters/*.py" = ["ANN401"]
# xpath_extraction uses defusedxml.ElementTree.fromstring when the
# ``xml-secure`` extra is installed (per ADR-0013). The stdlib fallback
# path retains an inline ``# nosec B314``; the hardened path is not
# flagged by S314/B314, so no per-file ignore is required.
# See: docs/adr/0013-defusedxml-optional-extra.md

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# --- Mypy (strict mode) -------------------------------------------------------

[tool.mypy]
strict = true
# mypy is run by the CI lint job on Python 3.12 (see
# ``.github/workflows/ci.yml`` → ``lint`` job). Targeting 3.12 is also
# required for compatibility with ``numpy>=2.5`` stub files (introduced
# in late 2025), which use the PEP 695 ``type`` statement. 3.11 is
# still covered by the ``test-unit`` matrix job, which runs the test
# suite against the real 3.11 interpreter.
python_version = "3.12"
files = ["src/paxman"]
# attrs ships with a built-in mypy plugin since mypy 0.570; no explicit
# plugin config needed. The plugin is auto-detected when @attrs.define or
# @attr.s is used.
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Re-enable typed annotations in `__init__.py` re-export shells.
module = ["src/paxman/__init__", "src.paxman.__init__"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# The ``paxman.testing`` module uses ``@st.composite`` from
# ``hypothesis`` (no type stubs available) for strategy composition.
# The decorator is dynamically typed; ``untyped-decorator`` is a
# false positive. Disable the check for this module.
module = ["paxman.testing", "paxman.testing.__init__"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# ``defusedxml`` is the optional-extra security dep used by
# ``xpath_extraction`` (ADR-0013, issue #72). The upstream package does
# not ship type stubs, so we suppress the ``import-untyped`` diagnostic
# here rather than via an inline ``# type: ignore`` at the call site
# (per ``AGENTS.md``: no inline suppressions in ``src/paxman/``).
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true

# --- Pytest ------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "deterministic: tests that verify deterministic behavior",
    "replay: tests that verify replay equivalence",
    "property: hypothesis property tests",
    "slow: tests that take >1s",
    "integration: tests that exercise the full pipeline",
    "unit: fast, isolated unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:importlib._bootstrap",
]

# --- Coverage (pytest-cov) ----------------------------------------------------

[tool.coverage.run]
branch = true
source = ["src/paxman"]
omit = [
    "src/paxman/__init__.py",
    "src/paxman/_version.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90
# Per V1_ACCEPTANCE_CRITERIA.md §2.2:
# - errors.py and versioning.py must be 100%
# - contract/, planner/, executor/, reconciler/ must be ≥ 90%
# - artifact/ must be ≥ 95%
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# --- Interrogate (docstring coverage) ---------------------------------------

[tool.interrogate]
fail-under = 100
ignore-init-module = true   # skip __init__.py re-exports
ignore-init-method = true   # skip __init__ methods
ignore-magic = true         # skip __str__, __repr__, etc.
ignore-private = true       # skip _private methods
ignore-semiprivate = true   # skip __dunder__ methods
exclude = ["tests", "docs", "build", "dist", ".venv"]
verbose = 2
color = true

# --- Import-linter (module DAG enforcement) ----------------------------------

# Per PACKAGE_STRUCTURE.md §2, §11. The cross-cutting modules at the
# package root may not import from any subsystem layer.
# Start minimal in Sprint 1; subsystem-specific contracts are added in
# Sprint 2+ as the subsystem code lands.
[tool.importlinter]
root_package = "paxman"

[[tool.importlinter.contracts]]
name = "Cross-cutting modules must not import from subsystems"
type = "forbidden"
# List the 9 cross-cutting module files explicitly as sources. We cannot
# use the parent package ``paxman`` as the source because it is also the
# parent of the forbidden subpackages (a "forbidden" contract with
# parent/descendant sources is ambiguous in import-linter).
source_modules = [
    "paxman.errors",
    "paxman.types",
    "paxman.protocols",
    "paxman.versioning",
    "paxman.logging",
    "paxman.budget",
    "paxman.clock",
    "paxman.ids",
    "paxman.serialization",
]
forbidden_modules = [
    "paxman.contract",
    "paxman.planner",
    "paxman.capabilities",
    "paxman.executor",
    "paxman.reconciler",
    "paxman.artifact",
    "paxman.api",
]

# Sprint 2 deliverable D2.13 / exit criterion #8.
# The contract subsystem is the ONLY layer that knows about external schemas;
# it must not depend on any other subsystem (per PACKAGE_STRUCTURE.md §3 and
# the boundary rule in AGENTS.md). Each leaf module is listed explicitly
# because import-linter's "forbidden" contract does not recurse into
# submodules of a listed source_module.
[[tool.importlinter.contracts]]
name = "Contract subsystem must not import from other subsystems"
type = "forbidden"
source_modules = [
    "paxman.contract",
    "paxman.contract._types",
    "paxman.contract.canonical",
    "paxman.contract.semantics",
    "paxman.contract.validator",
    "paxman.contract.registry",
    "paxman.contract.adapters",
    "paxman.contract.adapters.base",
    "paxman.contract.adapters.dict_dsl",
    "paxman.contract.adapters.pydantic",
    "paxman.contract.adapters.json_schema",
]
forbidden_modules = [
    "paxman.planner",
    "paxman.executor",
    "paxman.reconciler",
    "paxman.artifact",
    "paxman.capabilities",
    "paxman.api",
]

# Sprint 3 deliverable D3.20 / exit criterion #13.
# The planner subsystem must not import from executor, reconciler,
# artifact, or api (per PACKAGE_STRUCTURE.md §2, §4, and §11.2).
# It MAY import from contract, capabilities, and cross-cutting modules.
# Each leaf module is listed explicitly (import-linter's "forbidden"
# contract does not recurse into submodules of a listed source_module).
[[tool.importlinter.contracts]]
name = "Planner subsystem must not import from executor/reconciler/artifact/api"
type = "forbidden"
source_modules = [
    "paxman.planner",
    "paxman.planner._registry",
    "paxman.planner.field_plan",
    "paxman.planner.heuristics",
    "paxman.planner.input_profile",
    "paxman.planner.policies",
    "paxman.planner.planner",
    "paxman.planner.scoring",
]
forbidden_modules = [
    "paxman.executor",
    "paxman.reconciler",
    "paxman.artifact",
    "paxman.api",
]

# Sprint 3 deliverable D3.20 / exit criterion #13.
# The capabilities subsystem must not import from planner, executor,
# reconciler, artifact, or api (per PACKAGE_STRUCTURE.md §2, §5, and §11.2).
# It MAY import from contract and cross-cutting modules.
# Each leaf module is listed explicitly.
[[tool.importlinter.contracts]]
name = "Capabilities subsystem must not import from other subsystems"
type = "forbidden"
source_modules = [
    "paxman.capabilities",
    "paxman.capabilities.base",
    "paxman.capabilities.registry",
    "paxman.capabilities.result",
    "paxman.capabilities.spec",
    "paxman.capabilities.v1",
    "paxman.capabilities.v1.case_normalization",
    "paxman.capabilities.v1.csv_extraction",
    "paxman.capabilities.v1.inference",
    "paxman.capabilities.v1.json_path_extraction",
    "paxman.capabilities.v1.lookup",
    "paxman.capabilities.v1.regex_extraction",
    "paxman.capabilities.v1.text_extraction",
    "paxman.capabilities.v1.trim_extraction",
    "paxman.capabilities.v1.validation",
    "paxman.capabilities.v1.xpath_extraction",
]
forbidden_modules = [
    "paxman.planner",
    "paxman.executor",
    "paxman.reconciler",
    "paxman.artifact",
    "paxman.api",
]

# Sprint 4 deliverable D4.19 / exit criterion #13.
# The executor subsystem must not import from reconciler, artifact,
# or api (per PACKAGE_STRUCTURE.md §2, §6, and §11.4). It MAY
# import from contract, capabilities, planner, and cross-cutting
# modules. Each leaf module is listed explicitly (import-linter's
# "forbidden" contract does not recurse into submodules of a
# listed source_module).
[[tool.importlinter.contracts]]
name = "Executor subsystem must not import from reconciler/artifact/api"
type = "forbidden"
source_modules = [
    "paxman.executor",
    "paxman.executor.budget_tracker",
    "paxman.executor.context",
    "paxman.executor.early_stop",
    "paxman.executor.evidence",
    "paxman.executor.execution_state",
    "paxman.executor.executor",
    "paxman.executor.field_runner",
]
forbidden_modules = [
    "paxman.reconciler",
    "paxman.artifact",
    "paxman.api",
]

# Sprint 4 deliverable D4.10 / exit criterion #10.
# The OpenAPI adapter is a sibling of the JSON Schema adapter inside
# ``contract/adapters/``. It may import from any other contract
# submodule (including the JSON Schema adapter) but must NOT
# import from any other subsystem. This is already covered by
# the "Contract subsystem must not import from other subsystems"
# contract above; no separate contract needed.

# Sprint 6 deliverable D6.24 / exit criterion #13.
# The artifact subsystem must not import from the API layer
# (per PACKAGE_STRUCTURE.md §2, §8, and §11.6).
[[tool.importlinter.contracts]]
name = "Artifact subsystem must not import from API layer"
type = "forbidden"
source_modules = [
    "paxman.artifact",
    "paxman.artifact.artifact",
    "paxman.artifact._hash",
    "paxman.artifact.confidence",
    "paxman.artifact.diagnostics",
    "paxman.artifact.evidence",
    "paxman.artifact.replay",
    "paxman.artifact.serializer",
    "paxman.artifact.statistics",
]
forbidden_modules = [
    "paxman.api",
    "paxman.api.errors",
    "paxman.api.normalize",
    "paxman.api.protocols",
    "paxman.api.registry",
    "paxman.api.replay",
    "paxman.api.types",
    "paxman.api.version",
]

# Sprint 5 deliverable D5.19 / exit criterion #14.
# The reconciler subsystem must not import from artifact or api
# (per PACKAGE_STRUCTURE.md §2, §7, and §11.5). It MAY import
# from contract, capabilities, executor, planner, and cross-cutting
# modules. Each leaf module is listed explicitly (import-linter's
# "forbidden" contract does not recurse into submodules of a
# listed source_module).
[[tool.importlinter.contracts]]
name = "Reconciler subsystem must not import from artifact/api"
type = "forbidden"
source_modules = [
    "paxman.reconciler",
    "paxman.reconciler.truth",
    "paxman.reconciler.confidence",
    "paxman.reconciler.merge",
    "paxman.reconciler.conflict",
    "paxman.reconciler.evidence_compare",
    "paxman.reconciler.unresolved",
    "paxman.reconciler.validation",
    "paxman.reconciler.money",
    "paxman.reconciler.reconciler",
]
forbidden_modules = [
    "paxman.artifact",
    "paxman.api",
]

# Sprint 5 deliverable D5.8 / exit criterion #6.
# ``reconciler/money.py`` is the only module in the reconciler
# subsystem that may import ``decimal`` directly. This is a
# structural guarantee: every other reconciler module must use
# ``MoneyValue`` (the contract-level type) rather than raw
# ``Decimal`` arithmetic.
#
# We enforce this with an ``independent`` AST-walk test (see
# ``tests/unit/test_reconciler_static_checks.py``) rather than a
# second import-linter ``forbidden`` contract, because import-linter
# ``forbidden`` rules are transitive — they would also catch
# legitimate transitive imports through ``paxman.contract.canonical``
# (which legitimately needs ``decimal`` for ``MoneyValue``).

# --- uv (project manager) -----------------------------------------------------
# PEP 735 dependency groups (replaces [tool.uv] dev-dependencies).

[dependency-groups]
dev = [
    # Test
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "hypothesis>=6.0",
    "datasets",
    "huggingface-hub",
    "pytest-benchmark",
    # Programmatic fixture generation (Sprint 7 D7.4)
    "factory-boy>=3.3",
    "faker>=22.0",
    # Lint + format
    "ruff>=0.4",
    # Type check
    "mypy>=1.10",
    "pyright>=1.1",
    # DAG + docstring
    "import-linter>=2.0",
    "interrogate>=1.7",
    # Security
    "bandit>=1.7",
    "pip-audit>=2.6",
    # Git hooks
    "pre-commit>=3.5",
    # Version comparison (Sprint 6: replay version checks per D6.7)
    "packaging>=24.0",
    # Build
    "hatchling",
    "hatch",
    # Documentation (Read the Docs + local builds)
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-autorefs>=1.0",
]
