[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend-service"
version = "0.1.0"
description = "Paxman reference example: minimal FastAPI normalization service."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paxman example" }]

dependencies = [
    "paxman[pydantic]>=1.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
