[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saas-procurement"
version = "0.1.0"
description = "Paxman reference example: CSV batch invoice/quotation pipeline with replay_hash reproducibility."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paxman example" }]

# ONLY runtime dep: paxman[pydantic]. Use stdlib csv.
dependencies = [
    "paxman[pydantic]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saas_procurement"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
